--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         - favicon
     ---->
     <link rel="shortcut icon" href="" type="image/svg+xml">
+    
+    <!---
+        - REMIXICONS
+    ---->
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" crossorigin="">
 
     <!---
         - google font link
@@ -26,12 +32,19 @@
     ---->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <!---
-        - preload images
-    ---->
+    
 </head>
 
 <body>
+
+    <!---
+        - PRELOADER
+    ---->
+
+    <div class="preload" data-preaload>
+        <div class="circle"></div>
+        <p class="text">LOFTGARTEN</p>
+    </div>
 
 
     <!---
