--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         - google font link
     ---->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+
     <!---
         - custom css link
     ---->
