--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     ---->
 
     <div class="preload" data-preaload>
+        <a href="#" class="inicio">
+            <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
+        </a>
         <div class="circle"></div>
         <p class="text">LOFTGARTEN</p>
     </div>
