--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a href="#" class="inicio">
             <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
         </a>
-        <div class="circle"></div>
+        <div class="rectangulo"></div>
         <p class="text">LOFTGARTEN</p>
     </div>
 
