--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         - PRELOADER
     ---->
 
-    <div class="preload" data-preaload>
+    <!-- <div class="preload" data-preaload>
         <a href="#" class="inicio">
             <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
-        </a>
+        </a> -->
         <div class="rectangulo"></div>
         <p class="text">LOFTGARTEN</p>
     </div>
