--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         - PRELOADER
     ---->
 
-    <!-- <div class="preload" data-preaload>
-        <a href="#" class="inicio">
+    <div class="preload" data-preaload>
+        <!-- <a href="#" class="inicio">
             <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
         </a> -->
         <div class="rectangulo"></div>
