--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     ---->
 
     <div class="preload" data-preaload>
-        <!-- <a href="#" class="inicio">
+        <a href="#" class="inicio">
             <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
-        </a> -->
+        </a>
         <div class="rectangulo"></div>
         <p class="text">LOFTGARTEN</p>
     </div>
