--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="preload" data-preaload>
         <a href="#" class="inicio">
-            <img src="./assets/images/ultima.jpg" alt="">
+            <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
         </a>
         <div class="rectangulo"></div>
         <p class="text">LOFTGARTEN</p>
