--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
     ---->
 
     <div class="preload" data-preaload>
-        <a href="#" class="inicio">
-            <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
-        </a>
-        <div class="rectangulo"></div>
+        <div class="rectangulo">
+            <a href="#" class="inicio">
+                <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
+            </a>
+        </div>
         <p class="text">LOFTGARTEN</p>
     </div>
 
