--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
             </a>
         </div>
-        <p class="text">LOFTGARTEN</p>
+        <p class="text">Reality.elevated</p>
     </div>
 
 
