--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <a href="#" class="inicio">
                 <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
             </a>
+            <h2 class="title">LOFTGARTEN</h2>
         </div>
         <p class="text">Reality.elevated</p>
     </div>
