--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 
     <div class="preload" data-preaload>
         <div class="rectangulo">
-            <a href="#" class="inicio">
-                <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
-            </a>
+            <div>
+                <a href="#" class="inicio">
+                    <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
+                </a>
+            </div>
             <h2 class="title">LOFTGARTEN</h2>
         </div>
         <p class="text">Reality.elevated</p>
