--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img src="./assets/images/ultima.jpg" width="100" height="50" alt="">
                 </a>
             </div>
-            <h2 class="title">LOFTGARTEN</h2>
+            <P class="title">LOFTGARTEN</P>
         </div>
         <p class="text">Reality.elevated</p>
     </div>
