--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 
     <!---
-        - PRELOADER
+        - #PRELOADER
     ---->
 
     <div class="preload" data-preaload>
@@ -53,6 +53,29 @@
         </div>
         <p class="text">Reality.elevated</p>
     </div>
+
+    
+
+    <!---
+        - #TOP BAR
+    ---->
+
+
+
+    <!---
+        - #HEADER
+    ---->
+
+    <header class="header" data-header>
+
+        <div class="container">
+
+            <p class="logo">Reality.elevated</p>
+
+        </div>
+
+    </header>
+
 
 
     <!---
