--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
 
         </div>
 
+        <nav class="navbar" data-navbar>
+
+            <button class="close-btn" aria-label="close menu" data-nav-toggler>
+                <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+            </button>
+
+            <p class="logo">Reality.elevated</p>
+
+            <ul class="navbar-list">
+
+                <li class="navbar-item">
+                    <a href="#PROJECTS" class="navbar-link hover-underline active">Projects</a>
+                </li>
+            </ul>
+
+        </nav>
+
     </header>
 
 
