--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
             <ul class="navbar-list">
 
                 <li class="navbar-item">
-                    <a href="#PROJECTS" class="navbar-link hover-underline active">Projects</a>
+                    <a href="#PROJECTS" class="navbar-link hover-underline active">
+                        <div class="separator"></div>
+                        <span class="span">Projects</span> 
+                    </a>
                 </li>
             </ul>
 
