--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
                         <span class="span">Projects</span> 
                     </a>
                 </li>
+
+                <li class="navbar-item">
+                    <a href="#ABOUT" class="navbar-link hover-underline active">
+                        <div class="separator"></div>
+                        <span class="span">About</span> 
+                    </a>
+                </li>
             </ul>
 
         </nav>
