--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="preload" data-preaload>
         <div class="rectangulo">
             <a href="#" class="inicio">
-                <img src="./assets/images/portada.jpg" width="250" height="120" alt="">
+                <img src="./assets/images/portada.jpg" height="120" width="250" alt="">
             </a>
         </div>
         <p class="text">Reality.elevated</p>
