--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <p class="logo">Reality.elevated</p>
 
-            <nav class="navbar" data-navbar>
+            <nav class="navbar active" data-navbar>
 
                 <button class="close-btn" aria-label="close menu" data-nav-toggler>
                     <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
