--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <p class="logo">Reality.elevated</p>
 
-            <nav class="navbar active" data-navbar>
+            <nav class="navbar" data-navbar>
 
                 <button class="close-btn" aria-label="close menu" data-nav-toggler>
                     <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -115,6 +115,25 @@
 
         </div>  
     </header>
+
+
+    <main>
+        <article>
+
+        <!---
+        - #HERO
+        ---->
+        <section class="hero text" aria-label="home" id="home">
+
+            <ul class="hero-slider" data-hero-slider>
+
+                <li></li>
+            </ul>
+        </section>
+
+
+        </article>
+    </main>
 
 
 
