--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
             <ul class="hero-slider" data-hero-slider>
 
-                <li class="hero-slider" data-hero-slider-item>
+                <li class="hero-slider active" data-hero-slider-item>
                     <div class="slider-bg">
                         
                         <img src="./assets/images/portada.jpg" width="1880" height="950" alt="" class="img-cover">
