--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
                     </div>
                     
                     <p class="label-2 section-subtitle slider-reveal">LOFTGARTEN</p>
+
+                    <p class="body-2 hero-text slider-reveal">lOFTGARTEN</p>
+
+                    <div hr class="btn btn-primary slider-reveal">
+                        <i class="ri-corner-left-down-line"></i>
+                    </div>
                     
                 </li>
             </ul>
