--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
                     </div>
                     
                 </li>
+
+                <div class="text-description">
+                    <p>We parther with the desing community, brands,<br>
+                    and ambitius teams to push today's boundaries<br>
+                    to desing the possiblities of tomorrow through<br>
+                    spatial ideation, motion desing, and 3D imagery </p>
+                </div>
             </ul>
         </section>
 
