--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
                     
                 </li>
 
-                <div class="text-description">
-                    <p>We parther with the desing community, brands,<br>
-                    and ambitius teams to push today's boundaries<br>
-                    to desing the possiblities of tomorrow through<br>
-                    spatial ideation, motion desing, and 3D imagery </p>
-                </div>
+                <p class="label-2 description">
+                We parther with the desing community, brands,<br>
+                and ambitius teams to push today's boundaries<br>
+                to desing the possiblities of tomorrow through<br>
+                spatial ideation, motion desing, and 3D imagery </p>
+    
             </ul>
         </section>
 
