--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             
                             <p class="label-2 section-subtitle slider-reveal">LOFTGARTEN</p>
 
-                            <p class="body-2 hero-text slider-reveal">LOFTGARTEN</p>
+                            <h3 class="body-2 hero-text slider-reveal">LOFTGARTEN</h3>
 
                             <div hr class="btn btn-primary slider-reveal">
                                 <i class="ri-corner-left-down-line"></i>
