--- a/index.html
+++ b/index.html
@@ -151,6 +151,21 @@
                     </ul>
                 </section>
 
+                <!---
+                - #PROJECTS
+                ---->
+                <section class="section project bg-black-10 text" aria-label="project">
+                    <div class="container">
+
+                        <p class="section-subtitle">
+                            At Loftgarten, we exist <br>
+                            to ideate, visulise, and <br>
+                            create a new era of <br> realities.</p>
+
+                    </div>
+
+                </section>
+
 
         </article>
     </main>
