--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
                         <p class="section-subtitle">
                             At Loftgarten, we exist <br>
                             to ideate, visulise, and <br>
-                            create a new era of <br> realities.</p>
+                            create a new era of <br> realities.
+                        </p>
+
+                        <p class="section-description-2">
+                            our in-house team, led by contemporary designer and leader in spatial experience desing,
+                            Paul Milinski. We work together to bring your project one step closer to reality by using
+                            creative direction, 3D architectural visualisaton, and motion desing. if you are looking
+                            for an elevated physical or digital experience, we specialise in leading the creative thinking
+                            behind your projects to craft awe-inspiring and uniquely desirable experiences. 
+                        </p>
 
                     </div>
 
