--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
                             for an elevated physical or digital experience, we specialise in leading the creative thinking
                             behind your projects to craft awe-inspiring and uniquely desirable experiences. 
                         </p>
+                    </div>
 
+                    <div class="section project text-2">
+                        <img src="./assets/images/image2.jpg" alt="">
                     </div>
 
                 </section>
