--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </div>
 
                     <div class="section project text-2">
-                        <img src="./assets/images/image2.jpg" alt="">
+                        <img src="./assets/images/image2.jpg" height="264" width="165" alt="">
                     </div>
 
                 </section>
