--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
 
                     <div class="section project text-2">
                         <img src="./assets/images/image2.jpg" height="264" width="165" alt="">
+
+                        <p sextion-title>THE RESORT</p>
                     </div>
 
                 </section>
