--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
                     <div class="section project text-2">
                         <img src="./assets/images/image2.jpg" height="264" width="165" alt="">
 
-                        <p sextion-title>THE RESORT</p>
+                        <p class="section-title view">THE RESORT</p>
+
+                        <p class="section-view" >View Project</p>
                     </div>
 
                 </section>
