--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                         <p class="section-title view">THE RESORT</p>
 
-                        <p class="section-view" >View Project</p>
+                        <h1 class="section-view" >View Project</h1>
                     </div>
 
                 </section>
