--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
                     <div class="section project text-2">
                         <img src="./assets/images/image2.jpg" height="264" width="165" alt="">
 
-                        <p class="section-title view">THE RESORT</p>
+                        <h1 class="section-title view">THE RESORT</h1>
 
-                        <h2 class="section-view" >View Project</h2>
+                        <p class="section-view" >View Project<p>
                     </div>
 
                 </section>
