--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
                         <h1 class="section-title view">THE RESORT</h1>
 
                         <p class="section-view" >View Project<p>
+
+                        <img src="./assets/images/img.gif" height="264" width="165" alt="">
+
+                        <img src="./assets/images/image3.jpg" height="264" width="165" alt="">
                     </div>
 
                 </section>
