--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
                     <div class="section project text-2">
                         <img src="./assets/images/image2.jpg" height="264" width="165" alt="">
 
-                        <h1 class="section-title view">THE RESORT</h1>
+                        <h1 class="section-title view">THE <br> RESORT</h1>
 
                         <p class="section-view" >View Project<p>
 
-                        <img src="./assets/images/img.gif" height="264" width="165" alt="">
+                        <img class="gif-1" src="./assets/images/img.gif" height="264" width="165" alt="">
 
-                        <img src="./assets/images/image3.jpg" height="264" width="165" alt="">
+                        <img class="" src="./assets/images/image3.jpg" height="264" width="165" alt="">
                     </div>
 
                 </section>
