--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
                         <img class="gif-1" src="./assets/images/img.gif" height="264" width="165" alt="">
 
                         <img class="" src="./assets/images/image3.jpg" height="264" width="165" alt="">
+
+                        <div hr class="btn btn-primary slider-reveal">
+                            <i class="ri-corner-down-right-line"></i>
+                        </div>
                     </div>
 
                 </section>
