--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
                         <img class="" src="./assets/images/image3.jpg" height="264" width="165" alt="">
                     </div>
 
+                    <div section-title view>
+                        
+                        <h1 class="section-title view">THE <br> RESORT</h1>
+
+                        <div hr class="btn btn-primary slider-reveal">
+                            <i class="ri-corner-left-down-line"></i>
+                        </div>
+                    </div>
+
                 </section>
 
 
