--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
                     </div>
 
                     <div section-title view>
-                        
+
+                        <img class="" src="./assets/images/image3.jpg" height="1880" width="950" alt="">
+
                         <h1 class="section-title view">THE <br> RESORT</h1>
 
                         <div hr class="btn btn-primary slider-reveal">
