--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
                     <div section-title view>
 
-                        <img class="" src="./assets/images/image3.jpg" height="1880" width="950" alt="">
+                        <img class="" src="./assets/images/image3.jpg" width="1880" height="950" alt="">
 
                         <h1 class="section-title view">THE <br> RESORT</h1>
 
