--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
 
                         <img class="" src="./assets/images/image3.jpg" width="1880" height="750" alt="">
 
+                        <div hr class="btn btn-primary slider-reveal">
+                            <i class="ri-corner-up-left-fill"></i>
+                        </div>
+
                         <h1 class="section-title view">THE <br> RESORT</h1>
 
                         <div hr class="btn btn-primary slider-reveal">
