--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
                         <div hr class="btn btn-primary slider-reveal">
                             <i class="ri-corner-up-left-fill"></i>
                         </div>
+                        
+                        <p class="section-view" >View Project<p>
 
                         <h1 class="section-title view">THE <br> RESORT</h1>
 
