--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <i class="ri-corner-up-left-fill"></i>
                         </div>
                         
-                        <p class="section-view" >View Project<p>
+                        <p class="section-view" >View All<p>
 
                         <h1 class="section-title view">THE <br> RESORT</h1>
 
