--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                     <ul class="hero-slider" data-hero-slider>
 
                         <li class="hero-slider active" data-hero-slider-item>
-                            <div class="slider-bg">
-                                <img src="./assets/images/portada.jpg" width="1880" height="750" alt="" class="img-cover">
-                            </div>
+                            <!-- <div class="slider-bg">
+                                <img class="img1" src="./assets/images/portada.jpg" width="1880" height="750" alt="" class="img-cover">
+                            </div> -->
                             
                             <p class="label-2 section-subtitle slider-reveal">LOFTGARTEN</p>
 
