--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 <img class="img1" src="./assets/images/portada.jpg" width="1880" height="750" alt="" class="img-cover">
                             </div> -->
                             
-                            <p class="label-2 section-subtitle slider-reveal">LOFTGARTEN</p>
+                            <p class="label-2 section-subtitle1 slider-reveal">LOFTGARTEN</p>
 
                             <h3 class="body-2 hero-text slider-reveal">LOFTGARTEN</h3>
 
@@ -142,7 +142,7 @@
                             
                         </li>
 
-                        <h1 class="label-2 description">
+                        <h1 class=" description">
                         We parther with the desing community, brands,<br>
                         and ambitius teams to push today's boundaries<br>
                         to desing the possiblities of tomorrow through<br>
@@ -173,7 +173,7 @@
                     </div>
 
                     <div class="section project text-2">
-                        <img src="./assets/images/image2.jpg" height="264" width="165" alt="">
+                        <!-- <img src="./assets/images/image2.jpg" height="264" width="165" alt=""> -->
 
                         <h1 class="section-title view">THE <br> RESORT</h1>
 
@@ -190,7 +190,7 @@
 
                     <div class="home_2" >
 
-                        <img class="" src="./assets/images/image3.jpg" width="1880" height="750" alt="">
+                        <!-- <img class="" src="./assets/images/image3.jpg" width="1880" height="750" alt=""> -->
 
                         <div hr class="btn btn-primary slider-reveal">
                             <i class="ri-corner-up-left-fill"></i>
@@ -237,9 +237,9 @@
                         </div> 
                     </div>
 
-                    <div class="img_fond">
+                    <!-- <div class="img_fond">
                         <img class="" src="./assets/images/image4.jpg" width="1880" height="750" alt="">
-                    </div>
+                    </div> -->
 
                     <div class="text_info_3">
                         <img class="" src="./assets/images/image3.jpg" width="470" height="187" alt="">
