--- a/index.html
+++ b/index.html
@@ -164,16 +164,19 @@
                             to ideate, visulise, and <br>
                             create a new era of <br> realities.
                         </p>
-
-                        <p class="section-description-2">
-                            our in-house team, led by contemporary designer and leader in spatial experience desing,
-                            Paul Milinski. We work together to bring your project one step closer to reality by using
-                            creative direction, 3D architectural visualisaton, and motion desing. if you are looking
-                            for an elevated physical or digital experience, we specialise in leading the creative thinking
-                            behind your projects to craft awe-inspiring and uniquely desirable experiences. 
-                        </p>
+                        <div class="text2">
+                            <p class="section-description-2">
+                                our in-house team, led by contemporary designer and leader in spatial experience desing,
+                                Paul Milinski. We work together to bring your project one step closer to reality by using
+                                creative direction, 3D architectural visualisaton, and motion desing. if you are looking
+                                for an elevated physical or digital experience, we specialise in leading the creative thinking
+                                behind your projects to craft awe-inspiring and uniquely desirable experiences. 
+                            </p>
+                        </div>
                     </div>
+                </section>
 
+                <section class="section3">
                     <div class="section project text-2">
                         <!-- <img src="./assets/images/image2.jpg" height="264" width="165" alt=""> -->
 
@@ -190,11 +193,10 @@
                         <img class="" src="./assets/images/image3.jpg" height="264" width="165" alt="">
                     </div>
                 </section>
-                
 
 
-                <section>
 
+                <section class="section4 project bg-black-10 text">
                     <div class="home_2" >
 
                         <!-- <img class="" src="./assets/images/image3.jpg" width="1880" height="750" alt=""> -->
