--- a/index.html
+++ b/index.html
@@ -159,11 +159,12 @@
                 <section class="section2 project bg-black-10 text" aria-label="project">
                     <div class="container">
 
-                        <p class="section-subtitle">
-                            At Loftgarten, we exist <br>
-                            to ideate, visulise, and <br>
-                            create a new era of <br> realities.
-                        </p>
+                        <div class="section-subtitle">
+                            <p class="p1">At Loftgarten, we exist</p>
+                            <p class="p1">to ideate, visulise, and</p>
+                            <p class="p1">create a new era of</p>
+                            <p class="p1">realities.</p>
+                        </div>
                         <div class="text2">
                             <p class="section-description-2">
                                 our in-house team, led by contemporary designer and leader in spatial experience desing,
@@ -179,14 +180,16 @@
                 <section class="section3">
                     <div class="section project text-2">
                         <!-- <img src="./assets/images/image2.jpg" height="264" width="165" alt=""> -->
+                        
+                        <div class="title2">
+                            <h1 class="section-title view">THE <br> RESORT</h1>
+                        </div>
+                        
+                        <p class="section-view">View Project<p>
 
-                        <h1 class="section-title view">THE <br> RESORT</h1>
-
-                        <p class="section-view" >View Project<p>
-
-                            <div hr class="btn btn-primary slider-reveal">
-                                <i class="ri-corner-down-right-line"></i>
-                            </div>
+                        <div hr class="btn btn-primary slider-reveal">
+                            <i class="ri-corner-down-right-line"></i>
+                        </div>
 
                         <img class="gif-1" src="./assets/images/img.gif" height="264" width="165" alt="">
 
