--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
                         <img class="gif-1" src="./assets/images/img.gif" height="264" width="165" alt="">
 
-                        <img class="" src="./assets/images/image3.jpg" height="264" width="165" alt="">
+                        <img class="imag2" src="./assets/images/image3.jpg" height="264" width="165" alt="">
                     </div>
                 </section>
 
